--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Api - Pisco app",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tscc",
     "start": "node dist/index.js",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
