--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Backend Api - Pisco app",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "vercel-build": "npm run build",
     "start": "node dist/index.js",
     "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
